--- a/app/component/stop.scss
+++ b/app/component/stop.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   height: 100%;
   border-top: 1px solid #dddddd;
+  position: relative;
 }
 
 .stop-page-content {
@@ -71,13 +72,13 @@
   display: flex;
   border-top-color: #dddddd;
   border-top-width: 2px;
-  padding-bottom: 0.8em;
+  padding-bottom: 0;
+  position: relative;
 }
 
 .mobile {
   .stop-tab-container {
     border-bottom: none;
-    padding-bottom: 0.5em;
   }
 }
 
@@ -95,6 +96,8 @@
   border-bottom: 1px solid #dddddd;
   border-left: 1px solid #dddddd;
   border-right: 1px solid #dddddd;
+
+      padding-bottom: 0.8em;
 
   svg {
     stroke: $primary-color;
@@ -133,7 +136,6 @@
   line-height: 1.56;
   letter-spacing: -0.4px;
   margin-top: 0.8em;
-  padding-bottom: 0.8em;
 }
 
 .stop-page-tab_icon {
